# macrotype

./: .readthedocs.yml  AGENTS.md  DEV_NOTES.md  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
__macrotype__/macrotype/: __init__.pyi  __main__.pyi  cli.pyi  emit.pyi  emit_module.pyi  emit_type.pyi  meta_types.pyi  normalize.pyi  parse.pyi  pyi_extract.pyi  resolve.pyi  scanner.pyi  stubgen.pyi  symbols.pyi  typecheck.pyi  types_ast.pyi  validate.pyi  watch.pyi
demos/: sqla_demos.py  sqla_demos.pyi
docs/: conf.py  demos.rst  index.rst
macrotype/: __init__.py  cli.py  cli.pyi  emit_module.py  emit_type.py  meta_types.py  meta_types.pyi  normalize.py  overload_support.py  parse_type.py  pyi_extract.py  pyi_extract.pyi  resolve.py  scanner.py  stubgen.py  stubgen.pyi  symbols.py  typecheck.py  types_ast.py  types_ir.py  validate.py  watch.py
macrotype/cli/: __init__.py  __main__.py  typecheck.py  watch.py
macrotype/modules/: __init__.py  add_comment_transform.py  alias_transform.py  dataclass_transform.py  descriptor_transform.py  (+11 more)
stubs/: __main__.pyi  cli.pyi  meta_types.pyi  pyi_extract.pyi  stubgen.pyi
tests/: all_annotations.py  all_annotations.pyi  annotations.py  annotations.pyi  annotations_13.py  annotations_13.pyi  annotations_invalid.py  annotations_invalid_non_type.py  annotations_new.py  annotations_new.pyi  annotations_pep_695.py  annotations_pep_695.pyi  annotations_unsupported.py  annotations_unsupported.pyi  circ_a.py  circ_a.pyi  circ_b.py  circ_b.pyi  circ_expr_a.py  circ_expr_a.pyi  circ_expr_b.py  circ_expr_b.pyi  dataclass_classvar.py  dataclass_classvar.pyi  dataclass_sample.py  elliptic_tuple.py  elliptic_tuple.pyi  enums.pyi  external_nested.py  nested_dataclass.pyi  new_generic.py  new_generic.pyi  old_generic.py  old_generic.pyi  self_annotation.py  self_annotation.pyi  strict_error.py  strict_error.pyi  strict_union.py  strict_union.pyi  (+41 more)
(+96 files in other folders)
