[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "macrotype"
version = "0.2.0"
description = "Generate .pyi stub files from existing modules"
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Kurt Rose", email = "kurt@kurtrose.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
macrotype = "macrotype.cli:main"
macrotype-check = "macrotype.typecheck:main"

[project.optional-dependencies]
test = ["mypy", "pyright", "ruff", "pytest"]
build = ["build", "twine"]
doc = ["sphinx", "sphinx-rtd-theme"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "tests/annotations_13.py",
    "tests/annotations_13.pyi",
    "tests/annotations.pyi",
    "tests/typechecking.pyi",
    ".git",
    "macrotype/*.pyi",
    "__macrotype__",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402", "E731", "F811", "F841"]

[tool.mypy]
exclude = "^__macrotype__/"
